--- a/Project.toml
+++ b/Project.toml
@@ -26,8 +26,10 @@ julia = "1.9"
 [extras]
 ComponentArrays = "b0b7db55-cfe3-40fc-9ded-d10e2dbeff66"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
+Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+OptimizationMOI = "fd9f6733-72f4-499f-8506-86b2bdd0dea1"
 
 [targets]
-test = ["Test", "Optimization", "ComponentArrays", "ForwardDiff"]
+test = ["Test", "Optimization", "ComponentArrays", "ForwardDiff", "Ipopt", "OptimizationMOI"]
