--- a/Project.toml
+++ b/Project.toml
@@ -5,7 +5,9 @@ version = "0.1.0"
 
 [deps]
 CxxWrap = "1f15a43c-97ca-5a2a-ae31-89f07a497df4"
-blockSQP_jll = "fec014c7-73d5-5f83-866b-eea102cb7f01"
+OpenBLAS32 = "51095b67-9e93-468d-a683-508b52f74e81"
+blockSQP_mumps_jll = "2986b7fc-76ad-5884-9cb8-8e9b7a0d44b4"
+qpOASES_mumps_jll = "ea7176bd-ec22-57e2-b9c1-d49449e64f03"
 
 [weakdeps]
 ComponentArrays = "b0b7db55-cfe3-40fc-9ded-d10e2dbeff66"
@@ -28,8 +30,8 @@ ComponentArrays = "b0b7db55-cfe3-40fc-9ded-d10e2dbeff66"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 OptimizationMOI = "fd9f6733-72f4-499f-8506-86b2bdd0dea1"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
 test = ["Test", "Optimization", "ComponentArrays", "ForwardDiff", "Ipopt", "OptimizationMOI"]
