--- a/Project.toml
+++ b/Project.toml
@@ -21,11 +21,19 @@ ComponentArraysExtension = "ComponentArrays"
 OptimizationExtension = ["Optimization", "Pkg"]
 
 [compat]
+blockSQP_mumps_jll = "0.0.1"
 ComponentArrays = "0.15"
 CxxWrap = "0.16.0"
-Optimization = "~3.19.0, 4"
-Test = "1"
+ForwardDiff = "0.10"
+Ipopt = "1.10.6"
 julia = "1.9"
+OpenBLAS32 = "0.1.0"
+Optimization = "~3.19.0, 4"
+OptimizationMOI = "0.5"
+qpOASES_mumps_jll = "3.2.2"
+SparseArrays = "1.10"
+Symbolics = "6.38.0"
+Test = "1"
 
 [extras]
 ComponentArrays = "b0b7db55-cfe3-40fc-9ded-d10e2dbeff66"
