--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 name = "blockSQP"
 uuid = "eedde146-038c-472b-a63b-c8c70ebda014"
-authors = ["Christoph Plate <christoph.plate@ovgu.de>"]
+authors = ["Christoph Plate <christoph.plate@ovgu.de>", "Reinhold Wittmann <reinhold.wittmann@ovgu.de>"]
 version = "0.1.0"
 
 [deps]
@@ -27,7 +27,7 @@ OptimizationMOI = "0.5"
 SparseArrays = "1.10"
 Symbolics = "6.38"
 Test = "1"
-julia = "1.9"
+julia = "1.6 - 1.11"
 
 [extras]
 ComponentArrays = "b0b7db55-cfe3-40fc-9ded-d10e2dbeff66"
@@ -37,6 +37,7 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
 OptimizationMOI = "fd9f6733-72f4-499f-8506-86b2bdd0dea1"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+QPALM = "6c3e646c-629b-11e9-19d9-033f6272e8d4"              # For condensing example
 
 [targets]
 test = ["Test", "Optimization", "ComponentArrays", "ForwardDiff", "Ipopt", "OptimizationMOI", "LinearAlgebra"]
