--- a/Project.toml
+++ b/Project.toml
@@ -36,8 +36,8 @@ Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
 OptimizationMOI = "fd9f6733-72f4-499f-8506-86b2bdd0dea1"
+QPALM = "6c3e646c-629b-11e9-19d9-033f6272e8d4"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
-QPALM = "6c3e646c-629b-11e9-19d9-033f6272e8d4"              # For condensing example
 
 [targets]
 test = ["Test", "Optimization", "ComponentArrays", "ForwardDiff", "Ipopt", "OptimizationMOI", "LinearAlgebra"]
