--- a/Project.toml
+++ b/Project.toml
@@ -10,11 +10,10 @@ Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 [weakdeps]
 ComponentArrays = "b0b7db55-cfe3-40fc-9ded-d10e2dbeff66"
 Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
-Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 
 [extensions]
 ComponentArraysExtension = "ComponentArrays"
-OptimizationExtension = ["Optimization", "Pkg"]
+OptimizationExtension = "Optimization"
 
 [compat]
 ComponentArrays = "0.15"
