--- a/lib/NLPstructures/Project.toml
+++ b/lib/NLPstructures/Project.toml
@@ -1,6 +1,7 @@
 name = "NLPstructures"
 uuid = "adaf1311-06bf-4f71-ac93-2ddf680bb7ce"
-authors = ["Reinhold Wittmann", "Sebastian Sager"]
+authors = ["Reinhold Wittmann"]
+version = "0.1.0"
 
 [deps]
 ComponentArrays = "b0b7db55-cfe3-40fc-9ded-d10e2dbeff66"
