--- a/Project.toml
+++ b/Project.toml
@@ -8,6 +8,7 @@ ComponentArrays = "b0b7db55-cfe3-40fc-9ded-d10e2dbeff66"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 EnumX = "4e289a0a-7415-4d19-859d-a7e5c4648b56"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
+SciMLBase = "0bca4576-84f4-4d90-8ffe-ffa030f20462"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 
@@ -15,20 +16,21 @@ Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 Corleone = "2751e0db-33e9-4374-b36d-b7219e1e6b40"
 CorleoneOED = "6590a4b1-d036-41fe-a5b4-03a980244101"
 LuxCore = "bb33d45b-7691-41d6-9220-0943567d0623"
-Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
+OptimizationBase = "bca83a33-5cc9-4baa-983d-23429ab6bcbb"
 
 [extensions]
 NLPstructuresCorleone = ["LuxCore", "Corleone"]
 NLPstructuresCorleoneOED = ["LuxCore", "Corleone", "CorleoneOED"]
-OptimizationExtension = "Optimization"
+OptimizationExtension = "OptimizationBase"
 
 [compat]
 ComponentArrays = ">= 0.15"
 DocStringExtensions = "0.9.5"
 EnumX = "1.0.6"
 LuxCore = "1.5.3"
-Optimization = "~3.19.0, 4"
+OptimizationBase = ">= 4.0.0"
 Reexport = "1.2.2"
+SciMLBase = "2.136.0"
 SparseArrays = ">= 1.10"
 Symbolics = ">= 6.38"
 Test = "1"
