--- a/examples/Project.toml
+++ b/examples/Project.toml
@@ -3,8 +3,7 @@ CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 DifferentiationInterface = "a0c0ee7d-e4b9-4e03-894e-1c5f64a51d63"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
-Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
-OptimizationMOI = "fd9f6733-72f4-499f-8506-86b2bdd0dea1"
+OptimizationBase = "bca83a33-5cc9-4baa-983d-23429ab6bcbb"
 QPALM = "6c3e646c-629b-11e9-19d9-033f6272e8d4"
 ReverseDiff = "37e2e3b7-166d-5795-8a7a-e32c996b4267"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
