--- a/Project.toml
+++ b/Project.toml
@@ -16,11 +16,13 @@ Corleone = "2751e0db-33e9-4374-b36d-b7219e1e6b40"
 CorleoneOED = "6590a4b1-d036-41fe-a5b4-03a980244101"
 LuxCore = "bb33d45b-7691-41d6-9220-0943567d0623"
 OptimizationBase = "bca83a33-5cc9-4baa-983d-23429ab6bcbb"
+Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 
 [extensions]
 NLPstructuresCorleone = ["LuxCore", "Corleone"]
 NLPstructuresCorleoneOED = ["LuxCore", "Corleone", "CorleoneOED"]
 OptimizationExtension = "OptimizationBase"
+SymbolicsHessUtilities = "Symbolics"
 
 [compat]
 ComponentArrays = ">= 0.15"
@@ -31,6 +33,7 @@ OptimizationBase = ">= 4.0.0"
 Reexport = "1.2.2"
 SciMLBase = "2.136.0"
 SparseArrays = ">= 1.10"
+Symbolics = ">= 6.38"
 Test = "1"
 julia = "1.6 - 1.11"
 
