--- a/Project.toml
+++ b/Project.toml
@@ -24,28 +24,42 @@ OptimizationExtension = "OptimizationBase"
 SymbolicsHessUtilities = ["OptimizationBase", "Symbolics"]
 
 [compat]
+Aqua = "0.8.14"
 ComponentArrays = ">= 0.15"
 DocStringExtensions = "0.9.5"
 EnumX = "1.0.6"
 LuxCore = "1.5.3"
 OptimizationBase = ">= 4.0.0"
 Reexport = "1.2.2"
+SafeTestsets = "0.1.0"
 SparseArrays = ">= 1.10"
 Symbolics = ">= 6.38"
 Test = "1"
+DifferentiationInterface = ">=0.7.16"
+ForwardDiff = "1"
+Ipopt = "1"
+Optimization = "5"
+OptimizationMOI = "1"
+SparseConnectivityTracer = "1"
+SparseMatrixColorings = ">=0.4.23"
+LinearAlgebra = "1"
+Corleone = "1"
+CorleoneOED = "1"
 julia = "1.6 - 1.11"
 
 [extras]
+DifferentiationInterface = "a0c0ee7d-e4b9-4e03-894e-1c5f64a51d63"
+ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
+Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
 OptimizationMOI = "fd9f6733-72f4-499f-8506-86b2bdd0dea1"
-Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
-Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
-DifferentiationInterface = "a0c0ee7d-e4b9-4e03-894e-1c5f64a51d63"
+SafeTestsets = "1bc83da4-3b8d-516f-aca4-4fe02f6d838f"
 SparseConnectivityTracer = "9f842d2f-2579-4b1d-911e-f412cf18a3f5"
 SparseMatrixColorings = "0a514795-09f3-496d-8182-132a7b665d35"
-ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
+Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
 
 [targets]
-test = ["LinearAlgebra", "Optimization", "OptimizationMOI", "Ipopt", "Symbolics", "Test", "DifferentiationInterface", "SparseConnectivityTracer", "SparseMatrixColorings", "ForwardDiff"]
+test = ["LinearAlgebra", "Optimization", "OptimizationMOI", "Ipopt", "Symbolics", "Test", "DifferentiationInterface", "SparseConnectivityTracer", "SparseMatrixColorings", "ForwardDiff", "SafeTestsets", "Aqua"]
