--- a/examples/Project.toml
+++ b/examples/Project.toml
@@ -16,4 +16,4 @@ SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 SparseConnectivityTracer = "9f842d2f-2579-4b1d-911e-f412cf18a3f5"
 SparseMatrixColorings = "0a514795-09f3-496d-8182-132a7b665d35"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
-blockSQP = "eedde146-038c-472b-a63b-c8c70ebda014"
+blockSQP2 = "eedde146-038c-472b-a63b-c8c70ebda014"
