--- a/Project.toml
+++ b/Project.toml
@@ -7,8 +7,12 @@ version = "0.1.0"
 ComponentArrays = "b0b7db55-cfe3-40fc-9ded-d10e2dbeff66"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 EnumX = "4e289a0a-7415-4d19-859d-a7e5c4648b56"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+OpenBLAS32_jll = "656ef2d0-ae68-5445-9ca0-591084a874a2"
+OpenBLAS_jll = "4536629a-c528-5b80-bd46-f80d51c5b363"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
+blockSQP2_jll = "8a1cb406-4d92-5272-b91c-0b6599bad0b1"
 
 [weakdeps]
 Corleone = "2751e0db-33e9-4374-b36d-b7219e1e6b40"
@@ -32,6 +36,8 @@ ForwardDiff = "1"
 Ipopt = "1"
 LinearAlgebra = "1"
 LuxCore = "1.5.3"
+OpenBLAS32_jll = "0.3.30"
+OpenBLAS_jll = "0.3.27"
 Optimization = "5"
 OptimizationBase = ">= 4.0.0"
 OptimizationMOI = "1"
@@ -45,6 +51,7 @@ SparseConnectivityTracer = "1"
 SparseMatrixColorings = ">=0.4.23"
 Symbolics = ">= 6.38"
 Test = "1"
+blockSQP2_jll = "0.0.2"
 julia = "1.6 - 1.11"
 
 [extras]
