TODO add blockSQP2_jll and publish

--- a/Project.toml
+++ b/Project.toml
@@ -7,7 +7,8 @@ version = "0.1.0"
 ComponentArrays = "b0b7db55-cfe3-40fc-9ded-d10e2dbeff66"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 EnumX = "4e289a0a-7415-4d19-859d-a7e5c4648b56"
-OpenBLAS_jll = "4536629a-c528-5b80-bd46-f80d51c5b363"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+OpenBLAS32_jll = "656ef2d0-ae68-5445-9ca0-591084a874a2"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 
@@ -33,7 +34,7 @@ ForwardDiff = "1"
 Ipopt = "1"
 LinearAlgebra = "1"
 LuxCore = "1.5.3"
-OpenBLAS_jll = "0.3.27"
+OpenBLAS32_jll = "0.3.30"
 Optimization = "5"
 OptimizationBase = ">= 4.0.0"
 OptimizationMOI = "1"
